<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.luisdavila.formulario.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"

            android:textSize="20dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eLoggin"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="20dp"

            />
        <EditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:id="@+id/ePass"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/rpass"
            android:textSize="20dp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/eRpass"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"

            android:textSize="20dp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/eCorreo"
            />



    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mas"
            android:textSize="20dp"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/radioMas"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/fem"
            android:id="@+id/radioFem"
            android:textSize="20dp"/>

    </RadioGroup>




    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:id="@+id/date">

    </DatePicker>

        <TextView android:id="@+id/LblMensaje"
            android:text="Selecciona_una_opcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"/>
    <Spinner android:id="@+id/CmbOpciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <CheckBox android:id="@+id/checkbox_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vid"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_est"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/est"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_soc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soc"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aceptar"
        android:text="@string/acep"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eVista"
        />

    </LinearLayout>

</ScrollView>
